--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".addItems" android:label="Add items"></activity>
+        <activity android:name=".showProducts"></activity>
+        <activity
+            android:name=".addItems"
+            android:label="Add items" />
         <activity android:name=".dashboard" />
         <activity
             android:name=".login"
